# parsedsltest

./: .gitignore  README.md  benchmark.html  lvdsl.cabal
app/: Main.hs
bench/: MainBench.hs
src/: Algebra.hs  Lib.hs
test/: DslSpec.hs  Generators.hs  SystemCallSpec.hs
