name:                lvdsl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lvdsl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable lvdsl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -- -prof -fprof-auto
  build-depends:       base
                     , lvdsl
                     , attoparsec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite lvdsl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       attoparsec              >= 0.13
                     , base
                     , bytestring              >= 0.10
                     , lvdsl
                     , hspec                   >= 2.0.0
                     , QuickCheck              >= 2.4.0.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  other-modules:       DslSpec
  default-extensions:  OverloadedStrings
source-repository head
  type:     git
  location: https://github.com/githubuser/lvdsl
